change "show" naming to singular resource name, add examples resource

--- a/app/templates/categories/index.hbs
+++ b/app/templates/categories/index.hbs
@@ -1,6 +1,6 @@
 <h1>Categories</h1>
 {{#each model as |category|}}
-  {{#link-to "categories.show" category.id class="unstyled-link"}}
+  {{#link-to "categories.category" category.id class="unstyled-link"}}
     {{category.name}}
   {{/link-to}}
 {{/each}}
